--- a/src/app/usit/components/consultant-components/consultant-openreqs/consultant-fulltime-openreqs/consultant-fulltime-openreqs.component.html
+++ b/src/app/usit/components/consultant-components/consultant-openreqs/consultant-fulltime-openreqs/consultant-fulltime-openreqs.component.html
@@ -1,83 +1,84 @@
 <div class="hot-list-container">
-<ul class="breadcrumb">
-    <li><a (click)="navigateToDashboard()">Home</a></li>
-    <li class="last">Job Requirements</li>
-</ul>
+    <ul class="breadcrumb">
+        <li><a (click)="navigateToDashboard()">Home</a></li>
+        <li class="last">Job Requirements</li>
+    </ul>
 
-<div class="header-container mat-elevation-z1">
-    <span class="header-text">
-       Full-Time Job Requirements
-    </span>
- 
-    <div class="hot-list-actions">
-        <div class="search-hot-list">
-            <input matInput type="text" class="search" placeholder="search" (keyup)="applyFilter($event)">
+    <div class="header-container mat-elevation-z1">
+        <span class="header-text">
+            Full-Time Job Requirements
+        </span>
+
+        <div class="hot-list-actions">
+            <div class="search-hot-list">
+                <input matInput type="text" class="search" placeholder="search" (keyup)="applyFilter($event)">
+            </div>
         </div>
     </div>
-</div>
 
-<div id="table-container" class="table-wrapper">
-    <section class="mat-elevation-z8 hot-list-table-style">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" matSort oncopy="return false">
+    <div id="table-container" class="table-wrapper">
+        <section class="mat-elevation-z8 hot-list-table-style">
+            <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" matSort
+                oncopy="return false">
 
-            <!-- SNo Column -->
-            <ng-container matColumnDef="SerialNum">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"
-                    style="width: 1%">
-                    S.No </th>
-                <td mat-cell *matCellDef="let element" style="width: 1%"> {{element?.serialNum}}</td>
-            </ng-container>
+                <!-- SNo Column -->
+                <ng-container matColumnDef="SerialNum">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number"
+                        style="width: 1%">
+                        S.No </th>
+                    <td mat-cell *matCellDef="let element" style="width: 1%"> {{element?.serialNum}}</td>
+                </ng-container>
 
-            <!-- Posted on Column-->
-            <ng-container matColumnDef="postedon">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by postedon"
-                    style="width: 2%">Posted On</th>
-                <td mat-cell *matCellDef="let element" nowrap style="width: 2%"> {{element?.posted_on |
-                    date:'MM-dd-yyyy HH:mm' }} </td>
-            </ng-container>
+                <!-- Posted on Column-->
+                <ng-container matColumnDef="postedon">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by postedon"
+                        style="width: 2%">Posted On</th>
+                    <td mat-cell *matCellDef="let element" nowrap style="width: 2%"> {{element?.posted_on |
+                        date:'MM-dd-yyyy HH:mm' }} </td>
+                </ng-container>
 
-            <!-- Job Title Column-->
-            <ng-container matColumnDef="job_title">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by job_title"
-                    style="width: 20%">
-                    Title </th>
-                <td mat-cell *matCellDef="let element" style="width: 20%">
-                    <span class="consultant-name" (click)="goToJobDescription(element)">
-                        {{element?.job_title|titlecase}}
-                    </span>
-                </td>
-            </ng-container>
+                <!-- Job Title Column-->
+                <ng-container matColumnDef="job_title">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by job_title"
+                        style="width: 20%">
+                        Title </th>
+                    <td mat-cell *matCellDef="let element" style="width: 20%">
+                        <span class="consultant-name" (click)="goToJobDescription(element)">
+                            {{element?.job_title|titlecase}}
+                        </span>
+                    </td>
+                </ng-container>
 
-            <!-- Category Column-->
-            <ng-container matColumnDef="category_skill">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category"
-                    style="width: 13%">
-                    Category </th>
-                <td mat-cell *matCellDef="let element" style="width: 13%">
-                    {{ element?.category_skill | titlecase }} </td>
-            </ng-container>
+                <!-- Category Column-->
+                <ng-container matColumnDef="category_skill">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Category"
+                        style="width: 13%">
+                        Category </th>
+                    <td mat-cell *matCellDef="let element" style="width: 13%">
+                        {{ element?.category_skill | titlecase }} </td>
+                </ng-container>
 
-            <!-- Employment Type Column-->
-            <ng-container matColumnDef="employment_type">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header
-                    sortActionDescription="Sort by employment_type" style="width: 3%"> Emp Type </th>
-                <td mat-cell *matCellDef="let element" style="width: 3%">{{element?.employment_type | titlecase}}
-                </td>
-            </ng-container>
+                <!-- Employment Type Column-->
+                <ng-container matColumnDef="employment_type">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header
+                        sortActionDescription="Sort by employment_type" style="width: 3%"> Emp Type </th>
+                    <td mat-cell *matCellDef="let element" style="width: 3%">{{element?.employment_type | titlecase}}
+                    </td>
+                </ng-container>
 
-            <!-- Job Location Column-->
-            <ng-container matColumnDef="job_location">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Job Location"
-                    style="width: 10%"> Location </th>
-                <td mat-cell *matCellDef="let element" style="width: 10%">{{element?.job_location | titlecase}}
-                </td>
-            </ng-container>
+                <!-- Job Location Column-->
+                <ng-container matColumnDef="job_location">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Job Location"
+                        style="width: 10%"> Location </th>
+                    <td mat-cell *matCellDef="let element" style="width: 10%">{{element?.job_location | titlecase}}
+                    </td>
+                </ng-container>
 
-            <!-- Action Column-->
-            <ng-container matColumnDef="Action">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Action"
-                    style="width: 3%">Action</th>
-                <td mat-cell *matCellDef="let element" nowrap style="width: 3%">
+                <!-- Action Column-->
+                <ng-container matColumnDef="Action">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Action"
+                        style="width: 3%">Action</th>
+                    <!-- <td mat-cell *matCellDef="let element" nowrap style="width: 3%">
                     <ng-container *ngIf="element?.status === 'Apply'; else statusText">
                         <button mat-flat-button color="primary" style="width: max-content; height: max-content"
                             (click)="apply(element)">
@@ -89,23 +90,96 @@
                             {{element?.status}}
                         </span>
                     </ng-template>
-                </td>
-            </ng-container>
-            <!-- table ROW -->
-            <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
-        </table>
-        <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
-    </section>
-    <hr>
-</div>
+                </td> -->
+                    <td mat-cell *matCellDef="let element" style="width: 3%">
+                        <!-- If status is Applied, show text -->
+                        <span *ngIf="element?.status === 'Applied'" style="font-weight: bold; color: green;">
+                            {{ element?.status }}
+                        </span>
 
-<div class="paginator">
-    <!-- paginator -->
-    <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
-        [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
-        [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
-    </mat-paginator>
-</div>
+                        <!-- Otherwise, show button -->
+                        <button *ngIf="element?.status !== 'Applied'" mat-flat-button color="primary"
+                            style="width: max-content; height: max-content" (click)="openJob(element?.job_source)">
+                            {{ element?.status }}
+                        </button>
+                    </td>
+
+
+                </ng-container>
+                <ng-container matColumnDef="Comment">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Comment"
+                        style="width: 3%"> Comment </th>
+                    <td mat-cell *matCellDef="let element" style="width: 3%">
+                        <span class="action-buttons">
+                            <button mat-icon-button class="action-button-ed" (click)="openCommentDialog(element)">
+                                <mat-icon>comment</mat-icon>
+                            </button>
+                        </span>
+                    </td>
+                </ng-container>
+
+                <!-- table ROW -->
+                <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
+            </table>
+            <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
+        </section>
+        <hr>
+    </div>
+
+    <div class="paginator">
+        <!-- paginator -->
+        <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
+            [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
+            [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
+        </mat-paginator>
+    </div>
 
 </div>
+<ng-template #commentDialog let-data>
+  <h2 mat-dialog-title class="header-textjob">
+    Job Application
+    <button mat-icon-button class="close-btn" (click)="closeDialog()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </h2>
+
+  <mat-dialog-content class="dialog-content">
+    <p>
+      Did you apply for the position
+      <strong class="highlight-job">{{ data.jobTitle | titlecase }}</strong>?
+    </p>
+
+    <!-- Show reason textarea only if user clicked No -->
+   <!-- Show this only when user clicked "No" -->
+<mat-form-field
+  *ngIf="showReason"
+  appearance="outline"
+  class="remarks-textarea">
+  <mat-label>Reason for not applying</mat-label>
+  <textarea
+    matInput
+    placeholder="Enter reason"
+    [(ngModel)]="remarks"
+    #remarksRef="ngModel"
+    name="remarks"
+    maxlength="250"
+    rows="4"
+    required>
+  </textarea>
+
+  <mat-hint align="end">{{ remarks?.length || 0 }} / 250</mat-hint>
+
+  <!--  Display error message below field -->
+  <mat-error *ngIf="remarksRef.invalid && remarksRef.touched">
+    Please provide a valid reason. Only spaces are not allowed.
+  </mat-error>
+</mat-form-field>
+
+  </mat-dialog-content>
+
+  <mat-dialog-actions align="end">
+    <button mat-button (click)="handleDialogResponse(false)">No</button>
+    <button mat-raised-button color="primary" (click)="handleDialogResponse(true)">Yes</button>
+  </mat-dialog-actions>
+</ng-template>
