--- a/src/app/usit/components/consultant-components/consultant-openreqs/consultant-fulltime-openreqs/consultant-fulltime-openreqs.component.scss
+++ b/src/app/usit/components/consultant-components/consultant-openreqs/consultant-fulltime-openreqs/consultant-fulltime-openreqs.component.scss
@@ -126,6 +126,7 @@
   .mdc-data-table__cell,
   .mdc-data-table__header-cell {
     padding: 0 4px 0 4px;
+   border-right: 1px solid lightgray !important;
   }
   
   .mat-mdc-header-row {
@@ -302,4 +303,80 @@
     gap: 10px;
   }
   
-  
+  .status{
+    text-decoration: none !important;
+    color: white !important;
+  }
+  ::ng-deep .action-button-ed .mat-mdc-button-touch-target {
+  width: 24px !important;
+  height: 24px !important;
+}
+
+::ng-deep .action-button-ed .mat-mdc-focus-indicator {
+  width: 24px !important;
+  height: 24px !important;
+}
+.action-button-ed
+.mat-column-Name {
+  border-right: 1px solid lightgray;
+}
+/* Header styling */
+.header-textjob{
+  padding: 0 1.5rem;
+  font-weight: 600;
+  font-size: 1.25rem;
+  height: 60px;
+  background-color: #c9cbcd4f;
+  display: flex;
+  justify-content: space-between; /* space title and icon */
+  align-items: center;
+  border-bottom: 1px solid #dee2e6;
+  color: #212529;
+}
+
+.close-btn {
+  margin-left: auto;
+  color: #6c757d;
+}
+
+.close-btn:hover {
+  color: #000;
+}
+
+/* Dialog content styling */
+.dialog-content {
+  font-size: 1rem;
+  padding: 1rem 1.5rem;
+  color: #495057;
+}
+
+/* Job title highlight */
+.highlight-job {
+  color: #3f51b5; /* blue */
+  font-weight: 700; /* bold */
+}
+/* Style wrapper */
+.remarks-box {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+/* Apply consistent textarea design */
+.remarks-textarea {
+  width: 90%; /* match your Other Details field width */
+}
+
+.remarks-textarea .mat-mdc-form-field {
+  width: 100%;
+  margin-bottom: 12px;
+}
+
+/* Custom textarea look */
+textarea[matInput] {
+  min-height: 100px;  /* comfortable height */
+  resize: vertical;   /* allow vertical resize */
+  line-height: 1.5;
+  padding: 8px;
+  box-sizing: border-box;
+}
