--- a/src/app/usit/components/consultant-components/consultant-openreqs/consultant-openreqs.component.html
+++ b/src/app/usit/components/consultant-components/consultant-openreqs/consultant-openreqs.component.html
@@ -5,9 +5,9 @@
     </ul>
     <div class="header-container mat-elevation-z1">
         <span class="header-text">
-           Contract Job Requirements
+            Contract Job Requirements
         </span>
-       <!-- <div>
+        <!-- <div>
             <mat-form-field class="portal-form-field">
                 <mat-label>Select a Portal</mat-label>
                 <mat-select (selectionChange)="onSelectionChange($event)">
@@ -20,7 +20,7 @@
                     <mat-option value="techfetch">Tech Fetch</mat-option>   
                 </mat-select>
             </mat-form-field>
-        </div> --> 
+        </div> -->
         <div class="hot-list-actions">
             <div class="search-hot-list">
                 <input matInput type="text" class="search" placeholder="search " (keyup)="applyFilter($event)">
@@ -99,21 +99,43 @@
                 <ng-container matColumnDef="Action">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Action"
                         style="width: 3%">Action</th>
-                    <td mat-cell *matCellDef="let element" nowrap style="width: 3%">
-                        <ng-container *ngIf="element?.status === 'Apply'; else statusText">
-                            <button mat-flat-button color="primary" style="width: max-content; height: max-content"
-                                (click)="apply(element)">
-                                {{element?.status}}
-                            </button>
-                        </ng-container>
-                        <ng-template #statusText>
-                            <span [ngStyle]="{'font-weight': 'bold', 'color': 'green'}">
-                                {{element?.status}}
-                            </span>
-                        </ng-template>
+                    <!-- <td mat-cell *matCellDef="let element" nowrap style="width: 3%">
+                    <ng-container *ngIf="element?.status === 'Apply'; else statusText">
+                        <button mat-flat-button color="primary" style="width: max-content; height: max-content"
+                            (click)="apply(element)">
+                            {{element?.status}}
+                        </button>
+                    </ng-container>
+                    <ng-template #statusText>
+                        <span [ngStyle]="{'font-weight': 'bold', 'color': 'green'}">
+                            {{element?.status}}
+                        </span>
+                    </ng-template>
+                </td> -->
+                    <td mat-cell *matCellDef="let element" style="width: 3%">
+                        <span *ngIf="element?.status === 'Applied'" style="font-weight: bold; color: green;">
+                            {{ element?.status }}
+                        </span>
+
+                        <button *ngIf="element?.status !== 'Applied'" mat-flat-button color="primary"
+                            style="width: max-content; height: max-content" (click)="openJob(element?.job_source)">
+                            {{ element?.status }}
+                        </button>
                     </td>
+
                 </ng-container>
 
+   <ng-container matColumnDef="Comment">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Comment"
+                        style="width: 3%"> Comment </th>
+                    <td mat-cell *matCellDef="let element" style="width: 3%">
+                        <span class="action-buttons">
+                            <button mat-icon-button class="action-button-ed" (click)="openCommentDialog(element)">
+                                <mat-icon>comment</mat-icon>
+                            </button>
+                        </span>
+                    </td>
+                </ng-container>
 
                 <!-- table ROW -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
@@ -123,7 +145,7 @@
         </section>
         <hr>
     </div>
-    
+
     <div class="paginator">
         <!-- paginator -->
         <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
@@ -132,3 +154,50 @@
         </mat-paginator>
     </div>
 </div>
+<ng-template #commentDialog let-data>
+  <h2 mat-dialog-title class="header-textjob">
+    Job Application
+    <button mat-icon-button class="close-btn" (click)="closeDialog()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </h2>
+
+  <mat-dialog-content class="dialog-content">
+    <p>
+      Did you apply for the position
+      <strong class="highlight-job">{{ data.jobTitle | titlecase }}</strong>?
+    </p>
+
+    <!-- Show reason textarea only if user clicked No -->
+  <!-- Show this only when user clicked "No" -->
+<mat-form-field
+  *ngIf="showReason"
+  appearance="outline"
+  class="remarks-textarea">
+  <mat-label>Reason for not applying</mat-label>
+  <textarea
+    matInput
+    placeholder="Enter reason"
+    [(ngModel)]="remarks"
+    #remarksRef="ngModel"
+    name="remarks"
+    maxlength="250"
+    rows="4"
+    required>
+  </textarea>
+
+  <mat-hint align="end">{{ remarks?.length || 0 }} / 250</mat-hint>
+
+  <!-- Display error message below field -->
+  <mat-error *ngIf="remarksRef.invalid && remarksRef.touched">
+    Please provide a valid reason. Only spaces are not allowed.
+  </mat-error>
+</mat-form-field>
+
+  </mat-dialog-content>
+
+  <mat-dialog-actions align="end">
+    <button mat-button (click)="handleDialogResponse(false)">No</button>
+    <button mat-raised-button color="primary" (click)="handleDialogResponse(true)">Yes</button>
+  </mat-dialog-actions>
+</ng-template>
