--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -138,8 +138,8 @@
             <th mat-header-cell *matHeaderCellDef style="width: 3%">
               Job Description
             </th>
-            <td mat-cell *matCellDef="let element" class="jd-info" (click)="goToJobDescription(element)"
-              style="width: 3%">
+            <td mat-cell *matCellDef="let element" class="jd-info" style="width: 3%"
+              (click)="empTag(element.requirement.id); goToJobDescription(element)">
               VIEW
             </td>
           </ng-container>
