--- a/src/app/usit/components/dashboard/dashboard.component.scss
+++ b/src/app/usit/components/dashboard/dashboard.component.scss
@@ -171,7 +171,7 @@ ul.breadcrumb li a:hover {
 
 .mat-mdc-header-row {
   height: 30px !important;
-  background-color: rgb(147, 204, 204);
+  background-color: rgb(147, 204, 204) !important;
   border-right: 1px solid lightgrey !important;
 
 }
