--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -1325,8 +1325,8 @@
                       <mat-icon>comment</mat-icon>
                     </button>
                     <!-- Optional: show comment count -->
-                    <!-- <span class="bold-text">({{ element?.requirement?.commentsCount || "0" }})</span> -->
-                  </span>
+                    <span class="bold-text">({{ element?.commentsCount || "0" }})</span>
+                  </span>s
                 </td>
               </ng-container>
 
@@ -1873,7 +1873,7 @@
                       <mat-icon>comment</mat-icon>
                     </button>
                     <!-- Optional: show comment count -->
-                    <!-- <span class="bold-text">({{ element?.requirement?.commentsCount || "0" }})</span> -->
+                    <span class="bold-text">({{ element?.commentsCount || "0" }})</span>
                   </span>
                 </td>
               </ng-container>
@@ -2857,7 +2857,7 @@
                       <mat-icon>comment</mat-icon>
                     </button>
                     <!-- Optional: show comment count -->
-                    <!-- <span class="bold-text">({{ element?.requirement?.commentsCount || "0" }})</span> -->
+                    <span class="bold-text">({{ element?.commentsCount || "0" }})</span>
                   </span>
                 </td>
               </ng-container>
