--- a/src/app/usit/components/vendor-management/blacklisted-companies-list/blacklisted-companies-list.component.html
+++ b/src/app/usit/components/vendor-management/blacklisted-companies-list/blacklisted-companies-list.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <ul class="breadcrumb">
     <li><a (click)="navigateToDashboard()">Home</a></li>
-    <li class="last">Blocklisted Companies</li>
+    <li class="last">Blacklisted Companies</li>
   </ul>
   <div class="header-container mat-elevation-z1">
     <span class="header-text">
-      Blocklisted Companies
+      Blacklisted Companies
     </span>
     <!-- <span class="filter-vendors">
         <button mat-raised-button class="filter-button" color="warn" (click)="getAllVendorByType('Recruiting')">Recruiting
