changes in dashboard interval count api

--- a/src/app/usit/components/dashboard/dashboard.component.html
+++ b/src/app/usit/components/dashboard/dashboard.component.html
@@ -1326,7 +1326,7 @@
                     </button>
                     <!-- Optional: show comment count -->
                     <span class="bold-text">({{ element?.commentsCount || "0" }})</span>
-                  </span>s
+                  </span>
                 </td>
               </ng-container>
 
