added changes in people tab & Submissions

--- a/src/app/usit/components/people/immigrant-info/immigrant-info.component.html
+++ b/src/app/usit/components/people/immigrant-info/immigrant-info.component.html
@@ -43,11 +43,11 @@
             </div>
         
             <div class="info-item">
-                <span class="static-label" style="color: grey">H1 Valid From :</span>
+                <span class="static-label" style="color: grey">Visa Valid From :</span>
                 <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.h1validfrom ?? '-'}}</span>
             </div>
             <div class="info-item">
-                <span class="static-label" style="color: grey">H1 Valid To :</span>
+                <span class="static-label" style="color: grey">Visa Valid To :</span>
                 <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.h1validto ?? '-'}}</span>
             </div>
         
