--- a/src/app/usit/components/recruitment/requirement-list/requirement-submission-count/requirement-submission-count.component.scss
+++ b/src/app/usit/components/recruitment/requirement-list/requirement-submission-count/requirement-submission-count.component.scss
@@ -112,3 +112,37 @@ thead {
   text-decoration: none;
   font-weight: bold;
 }
+.table-container {
+  max-height: 70vh; /* Adjust as per your layout */
+  overflow-y: auto;
+  overflow-x: auto;
+  display: block;
+  border: 1px solid #ddd;
+}
+ .custom-pagination {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    justify-content: end;
+    margin-top: 15px;
+  }
+  
+  .custom-pagination button {
+    padding: 5px 10px;
+    border: none;
+    background-color: white;
+    color: black;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: 0.3s;
+  }
+  
+  .custom-pagination button.active {
+    background-color: #1976d2;
+    color: white;
+  }
+  
+  .custom-pagination button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
